--- a/clusters/k3s.example.com/index.html
+++ b/clusters/k3s.example.com/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-06 Sat 14:20 -->
+<!-- 2021-02-06 Sat 18:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -567,7 +567,7 @@ you for permission to execute some code:
 </p>
 
 <pre class="example">
-The local variables list in k3s.org
+The local variables list in k3s.example.com.org
 contains values that may not be safe (*).
 
 Do you want to apply it?  You can type
@@ -576,17 +576,12 @@ n  -- to ignore the local variables list.
 !  -- to apply the local variables list, and permanently mark these
       values (*) as safe (in the future, they will be set automatically.)
 
-  * eval : (progn (org-babel-goto-named-src-block "k3s-org-emacs-load") (org-babel-execute-src-block) (outline-hide-sublevels 1))
+  * eval : (progn (load-file "../../meta/org-meta.el"))
 </pre>
 
 <p>
 You should type <code>y</code> to proceed, or type <code>!</code> to proceed and always trust this
-code from now on. Additionally, org-mode will ask a follow up question to gain
-permission to run the code block named <code>k3s-org-emacs-load</code> (The same as if you
-had run the code block yourself, with <code>C-c C-c</code>). You should type <code>y</code> again.
-(This second question will always be asked, each time you open the file, even
-if you had typed <code>!</code> to avoid the first question everytime. Sorry! It's a good
-security design, which you should not attempt to circumvent.)
+code from now on.
 </p>
 
 <p>
@@ -594,17 +589,17 @@ This automatic loading happens because of the <code>Local Variables</code> found
 top of the file. The <code>Local Variables</code> is a formal way to inform Emacs that you
 would like to run some code when the file is opened. It could be dangerous to
 do this in some situations, so it's a good thing that Emacs asked you this
-question! In this case, it is setting up to run the code block found in this
-file named <code>k3s-org-emacs-load</code>, in order to enable automatic HTML export
-whenever you save this file, as well as a few other fixes for things. If you
-don't desire this behaviour, remove the <code>eval</code> line from the <code>Local Variables</code>
+question! In this case, it is setting up to run the included emacs lisp file
+meta/org-meta.el, in order to enable automatic export (YAML and HTML) whenever
+you save this file, as well as a few other fixes for things. If you don't
+desire this behaviour, remove the <code>eval</code> line from the <code>Local Variables</code>
 section at the top of the file, and you will no longer see this message on
 load.
 </p>
 
 <p>
 When you opened this file, it should have automatically loaded in <code>Org</code> mode
-(or you might need to run <code>M-x org-mode</code>). 
+(or you might need to run <code>M-x org-mode</code>).
 </p>
 </div>
 </div>
@@ -1033,7 +1028,7 @@ cluster, read on.
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org93cf170">k3s.example.com
+<pre class="src src-config" id="org8a6326d">k3s.example.com
 </pre>
 </div>
 </div>
@@ -1045,7 +1040,7 @@ cluster, read on.
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org9942edd">root
+<pre class="src src-config" id="org0e43ee7">root
 </pre>
 </div>
 </div>
@@ -1063,7 +1058,7 @@ org-mode is not configured for tangling to any other directory.
 </p>
 
 <div class="org-src-container">
-<pre class="src src-config" id="org4c829bd">${HOME}/git/literate-k3s/clusters/k3s.example.com
+<pre class="src src-config" id="org94e0145">${HOME}/git/literate-k3s/clusters/k3s.example.com
 </pre>
 </div>
 </div>
@@ -1076,7 +1071,7 @@ org-mode is not configured for tangling to any other directory.
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org643d263">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="orgdb5e18a">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1090,7 +1085,7 @@ Since you'll need to specify the kubectl config file each and every time you use
 code blocks.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org1df6c7c">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="orga450e2b">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1136,7 +1131,7 @@ related.
 provider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org5590637">you@example.com
+<pre class="src src-config" id="org7be62dd">you@example.com
 </pre>
 </div>
 </div>
@@ -1149,7 +1144,7 @@ provider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdcfa9a6">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="org3e59c59">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1192,7 +1187,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdc9518c">whoami.k3s.example.com
+<pre class="src src-config" id="org99ecf21">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1204,7 +1199,7 @@ whoami service responds to.
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org559b074">v2.3
+<pre class="src src-config" id="org61a83cf">v2.3
 </pre>
 </div>
 </div>
@@ -1216,7 +1211,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdb9849b">INFO
+<pre class="src src-config" id="org1e0396b">INFO
 </pre>
 </div>
 </div>
@@ -1297,7 +1292,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#orgdcfa9a6">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#org3e59c59">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1635,7 +1630,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-4-2-8">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#orgdc9518c">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#org99ecf21">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1756,7 +1751,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">5.1.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-5-1-1">
 <div class="org-src-container">
-<pre class="src src-config" id="org1beda61">git.k3s.example.com
+<pre class="src src-config" id="orgace316d">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1768,7 +1763,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org6a56fa4">5Gi
+<pre class="src src-config" id="orgf86093d">5Gi
 </pre>
 </div>
 </div>
@@ -1780,7 +1775,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgcb20918">5Gi
+<pre class="src src-config" id="orgdd09bfe">5Gi
 </pre>
 </div>
 </div>
@@ -1793,7 +1788,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdc71d84">root
+<pre class="src src-config" id="orgfb5eaa1">root
 </pre>
 </div>
 </div>
@@ -1805,7 +1800,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org903527a">root@example.com
+<pre class="src src-config" id="org563063a">root@example.com
 </pre>
 </div>
 </div>
@@ -2385,7 +2380,7 @@ The name of the repository containing these org files, and from which flux
 reads. Not including the domain, just the name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgaa4cb21">literate-k3s
+<pre class="src src-config" id="orgb804832">literate-k3s
 </pre>
 </div>
 </div>
@@ -2397,7 +2392,7 @@ reads. Not including the domain, just the name.
 This is the correct git remote URL if you are using self-hosted Gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orga00afdd">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="orgb7914ee">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2455,7 +2450,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#orgaa4cb21">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#orgb804832">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2731,7 +2726,7 @@ well, so I instead opted to copy them here.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-06 Sat 14:20</p>
+<p class="date">Created: 2021-02-06 Sat 18:41</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
